--- a/doc/post-commit.mdwn
+++ b/doc/post-commit.mdwn
@@ -1,5 +1,5 @@
 A post-commit hook is run every time you commit a change to your
-[[subversion]] (or [[git]]) repository. To make the wiki be updated each
+[[subversion]] (or [[git]] or [[mercurial]]) repository. To make the wiki be updated each
 time a commit is made, it can be run from (or as) a post-commit hook.
 
 The best way to run ikiwiki in a post-commit hook is using a wrapper, which
