--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ ikiwiki (1.25) UNRELEASED; urgency=low
   * Drop real uid/gid in the suid wrapper, thus allowing commits to remote
     subversion repos and fixing some other issues.
   * Add support for tla, contributed by Clint Adams. Closes: #385936
+  * Add support for mercurial, contributed by Emanuele Aina.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  6 Sep 2006 15:47:25 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed,  6 Sep 2006 15:55:39 -0400
 
 ikiwiki (1.24) unstable; urgency=low
 
