--- a/doc/tla.mdwn
+++ b/doc/tla.mdwn
@@ -1,7 +1,6 @@
-[tla](http://wiki.gnuarch.org/) is an implementation of the [GNU](http://www.gnu.org/) [Arch](http://www.gnuarch.org/) revision control system. While ikiwiki is relatively
-independent of the underlying revision control system, and can easily be
-used without one, using it with Subversion is recommended since it's how
-the author uses it. ([[Git]] is another option.)
+[tla](http://wiki.gnuarch.org/) is an implementation of the
+[GNU](http://www.gnu.org/) [Arch](http://www.gnuarch.org/) revision control
+system. kiwiki supports storing a wiki in tla.
 
 Ikiwiki can run as a [[post-commit]] hook to update a wiki whenever commits
 come in. When running as a [[cgi]] with tla, ikiwiki automatically
