--- a/doc/tla.mdwn
+++ b/doc/tla.mdwn
@@ -1,6 +1,6 @@
 [tla](http://wiki.gnuarch.org/) is an implementation of the
 [GNU](http://www.gnu.org/) [Arch](http://www.gnuarch.org/) revision control
-system. kiwiki supports storing a wiki in tla.
+system. Ikiwiki supports storing a wiki in tla.
 
 Ikiwiki can run as a [[post-commit]] hook to update a wiki whenever commits
 come in. When running as a [[cgi]] with tla, ikiwiki automatically
