* Include <link rel> tag for RSS feeds, used by some aggregators and   firefox to find the feed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ ikiwiki (1.25) UNRELEASED; urgency=low
     subversion repos and fixing some other issues.
   * Add support for tla, contributed by Clint Adams. Closes: #385936
   * Add support for mercurial, contributed by Emanuele Aina.
+  * Include <link rel> tag for RSS feeds, used by some aggregators and
+    firefox to find the feed.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  6 Sep 2006 15:55:39 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed,  6 Sep 2006 16:42:21 -0400
 
 ikiwiki (1.24) unstable; urgency=low
 
