--- a/doc/todo/RSS_links.mdwn
+++ b/doc/todo/RSS_links.mdwn
@@ -10,6 +10,8 @@ all of them.
 
 For example, firefox requires the following:
 
-	<link rel="alternate" type="application/rss+xml" title="RSS href="index.rss" />
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="index.rss" />
+
+[[todo/done]]
 
 --[[Joey]]
