--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,8 +1,8 @@
 [[ikiwiki_logo|logo/ikiwiki.png]]  
 ikiwiki is a **wiki compiler**. It converts wiki pages
-into html pages suitable for publishing on a website. Unlike a traditional
-wiki, ikiwiki does not have its own means of storing page history,
-and instead uses a revision control system (such as [[Subversion]]).
+into html pages suitable for publishing on a website. Unlike many
+wikis, ikiwiki does not have its own means of storing page history,
+and instead uses a revision control system such as [[Subversion]].
 
 * [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
   It's the best way to find out when there's a new version to [[Download]].
