web commit by joey

--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -117,7 +117,7 @@ part).  GIT doesn't have a similar functionality like 'svn merge -rOLD:NEW
 FILE' (please see the relevant comment in mergepast for more details), so I
 had to invent an ugly hack just for the purpose.
 
-## [Mercurial](http://www.selenic.com/mercurial/)
+## [[Mercurial]]
 
 The Mercurial backend is still in a early phase, so it may not be mature 
 enough, but it should be simple to understand and use.
@@ -146,4 +146,6 @@ in the destination directory each time 'hg update' is called.
 CGI operates on M. rcs_commit() will commit directly in M.
 
 If you have any question or suggestion about the Mercurial backend 
-please refer to [Emanuele](http://nerd.ocracy.org/em/).
+please refer to [Emanuele](http://nerd.ocracy.org/em/)
+
+## [[tla]]
