--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,7 +1,7 @@
 [[ikiwiki_logo|logo/ikiwiki.png]]  
 ikiwiki is a **wiki compiler**. It converts wiki pages
 into html pages suitable for publishing on a website. Unlike many
-wikis, ikiwiki does not have its own means of storing page history,
+wikis, ikiwiki does not have its own ad-hoc means of storing page history,
 and instead uses a revision control system such as [[Subversion]].
 
 * [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
