web commit by joey

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -7,7 +7,7 @@ and instead uses a revision control system such as [[Subversion]].
 * [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
   It's the best way to find out when there's a new version to [[Download]].
 
-* See [[Features]] for a list of ikiwiki's features. [[RoadMap]], [[TODO]]
+* See [[Features]] for a list of ikiwiki's features and [[plugins]] for information about its plugins. [[RoadMap]], [[TODO]]
   and [[bugs]] might also be of interest. Feel free to post your questions
   and thoughts about ikiwiki to [[Discussion]].
 
