web commit by joey

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -8,8 +8,9 @@ and instead uses a revision control system such as [[Subversion]].
   It's the best way to find out when there's a new version to [[Download]].
 
 * See [[Features]] for a list of ikiwiki's features and [[plugins]] for information about its plugins. [[RoadMap]], [[TODO]]
-  and [[bugs]] might also be of interest. Feel free to post your questions
-  and thoughts about ikiwiki to [[Discussion]].
+  and [[bugs]] might also be of interest. 
+
+* Feel free to post your questions and thoughts about ikiwiki to [[Discussion]].
 
 [[template id=note text="""
 If you use ikiwiki, please list your wiki in [[IkiWikiUsers]].
