* Add a linkmap plugin (requires graphviz).

--- a/doc/bugs/rss_feed_cleanup_on_delete.mdwn
+++ b/doc/bugs/rss_feed_cleanup_on_delete.mdwn
@@ -1,2 +1,4 @@
 If a page stops inlining anthing, its rss feed file will linger around and
 not be deleted.
+
+(The linkmap plugin has the same problem with the png files it creates.)
