--- a/doc/todo/link_map.mdwn
+++ b/doc/todo/link_map.mdwn
@@ -3,4 +3,4 @@ An idea: Use graphviz to generate a map of all the links between pages.
 
 Graphviz can output image maps. -- ChristofferSawicki
 
-This could be a [[plugin]].
+[[todo/done]]
