--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ ikiwiki (1.25) UNRELEASED; urgency=low
   * Add support for mercurial, contributed by Emanuele Aina.
   * Include <link rel> tag for RSS feeds, used by some aggregators and
     firefox to find the feed.
+  * Add a linkmap plugin (requires graphviz).
 
- -- Joey Hess <joeyh@debian.org>  Wed,  6 Sep 2006 16:42:21 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  7 Sep 2006 00:11:18 -0400
 
 ikiwiki (1.24) unstable; urgency=low
 
