web commit by joey

--- a/doc/plugins/linkmap.mdwn
+++ b/doc/plugins/linkmap.mdwn
@@ -1,7 +1,7 @@
 [[template id=plugin name=linkmap included=1 author="Joey Hess"]]
 [[tag type/meta]]
 [[tag type/slow]]
-This plugin uses graphviz to generate a graph showing the links between a
+This plugin uses [graphviz](http://www.graphviz.org/) to generate a graph showing the links between a
 set of pages in the wiki. Example usage:
 
 	\[[linkmap pages="* and !blog/* and !*/Discussion"]]
