--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -4,6 +4,8 @@ lowercase, such as `IkiWiki::Plugin::inline`. Ikiwiki includes a
 `IkiWiki::Plugin::skeleton` that can be fleshed out to make a useful
 plugin. `IkiWiki::Plugin::pagecount` is another simple example.
 
+[[toc levels=2]]
+
 # Note
 
 One thing to keep in mind when writing a plugin is that ikiwiki is a wiki
