switch updo url

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -15,7 +15,7 @@ Sites that are using ikiwiki include:
 * Alessandro Dotti Contra's [personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog)
 * Kelly Clowers' [personal website](http://www.clowersnet.net/)
 * Anna's [nature features](http://kitenet.net/~anna/nature-feature/)
-* [Planet Debian upstream](http://updo.kitenet.net/)
+* [Planet Debian upstream](http://updo.debian.net/)
 * Roland Mas's [blog](http://roland.entierement.nu/categories/geek-en.html)
 * Sergio Talens-Oliag [personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
 * Christian Aichinger's [homepage](http://greek0.net/)
