remove a link.. people might want to replace the blog page with their own blog, and then having a backlink to pagespec is weird

--- a/basewiki/pagespec.mdwn
+++ b/basewiki/pagespec.mdwn
@@ -1,6 +1,6 @@
 To select a set of pages, such as pages that are locked, pages
 whose commit emails you want subscribe to, or pages to combine into a
-[[blog]], the wiki uses a PageSpec. This is an expression that matches
+blog, the wiki uses a PageSpec. This is an expression that matches
 a set of pages.
 
 The simplest PageSpec is a simple list of pages. For example, this matches
