--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.25) UNRELEASED; urgency=low
+ikiwiki (1.25) unstable; urgency=low
 
   * Add proper waitpid calls for open2ed processes throughout to avoid
     zombies; this hit htmltidy especially badly.
@@ -10,7 +10,7 @@ ikiwiki (1.25) UNRELEASED; urgency=low
     firefox to find the feed.
   * Add a linkmap plugin (requires graphviz).
 
- -- Joey Hess <joeyh@debian.org>  Thu,  7 Sep 2006 00:11:18 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  8 Sep 2006 01:54:14 -0400
 
 ikiwiki (1.24) unstable; urgency=low
 
