* Add a missing -n to tla undo call.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.26) UNRELEASED; urgency=low
+
+  * Add a missing -n to tla undo call. 
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  8 Sep 2006 15:10:13 -0400
+
 ikiwiki (1.25) unstable; urgency=low
 
   * Add proper waitpid calls for open2ed processes throughout to avoid
