--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -14,7 +14,7 @@ Released 29 April 2006.
 
 * Unit test suite (with tests of at least core stuff like
   [[PageSpec]]). _(status: exists, could of course use more tests)_
-* [[Plugins]] _(status: done, interface still not quite stable)_
+* [[Plugins]] _(status: done, interface still not [[quite_stable|todo/firm_up_plugin_interface]])_
 * [[Tags]] _(status: fair)_
 * Should have fully working [[todo/utf8]] support. _(status: good)_
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
