* Add a module version number to IkiWiki, so you can "use IkiWiki '1.00'"   to declare which version of the interface your plugin needs.

--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -173,7 +173,7 @@ they're saved, etc.
 
 To import the ikiwiki plugin interface:
 
-	use IkiWiki;
+	use IkiWiki '1.00';
 
 This will import several variables and functions into your plugin's
 namespace. These variables and functions are the ones most plugins need,
