--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ ikiwiki (1.27) UNRELEASED; urgency=low
       export some other things.
   * Changed all plugins included in ikiwiki to not use "IkiWiki::" when
     referring to stuff now exported by the IkiWiki module.
+  * Add a module version number to IkiWiki, so you can "use IkiWiki '1.00'"
+    to declare which version of the interface your plugin needs.
   * Anyone with a third-party ikiwiki plugin is strongly enrouraged
     to make like changes to it and avoid use of non-exported symboles from
     "IkiWiki::".
@@ -21,7 +23,7 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Support hyperestradier version 1.4.2, which adds a new required phraseform
     setting.
 
- -- Joey Hess <joeyh@debian.org>  Sat,  9 Sep 2006 18:38:19 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat,  9 Sep 2006 18:56:10 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
