--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,7 @@ ikiwiki (1.27) UNRELEASED; urgency=low
     referring to stuff now exported by the IkiWiki module.
   * Add a module version number to IkiWiki, so you can "use IkiWiki '1.00'"
     to declare which version of the interface your plugin needs.
-  * Anyone with a third-party ikiwiki plugin is strongly enrouraged
+  * Anyone with a third-party ikiwiki plugin is strongly encouraged
     to make like changes to it and avoid use of non-exported symboles from
     "IkiWiki::".
   * Link debian/changelog and debian/news to NEWS and CHANGELOG.
