* If an inlined page has a permalink, link the page title to that.

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,9 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Link debian/changelog and debian/news to NEWS and CHANGELOG.
   * Support hyperestradier version 1.4.2, which adds a new required phraseform
     setting.
+  * If an inlined page has a permalink, link the page title to that.
 
- -- Joey Hess <joeyh@debian.org>  Sat,  9 Sep 2006 18:56:10 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat,  9 Sep 2006 23:56:48 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
