web commit by BenjaminALee: Added my homepage.

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -20,6 +20,7 @@ Sites that are using ikiwiki include:
 * Sergio Talens-Oliag [personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
 * Christian Aichinger's [homepage](http://greek0.net/)
 * <a href="http://modeemi.fi/~tuomov/ion/">ion</a> window manager homepage
+* Ben A'Lee's [homepage](http://bmalee.eu/~bma/)
 
 Please feel free to add your own ikiwiki site!
 
